--- a/features/pointer-events.yml
+++ b/features/pointer-events.yml
@@ -1,8 +1,13 @@
-draft_date: 2024-11-07
 name: Pointer Events
-description: TODO
+description: Pointer events are an event model to handle pointing input devices such as a mouse, pen/stylus or touch (such as one or more fingers).
 spec: https://w3c.github.io/pointerevents/
+caniuse: pointer
+status:
+  compute_from: api.PointerEvent
 compat_features:
+  - api.Element.auxclick_event.type_pointerevent
+  - api.Element.click_event.type_pointerevent
+  - api.Element.contextmenu_event.type_pointerevent
   - api.Element.gotpointercapture_event
   - api.Element.hasPointerCapture
   - api.Element.lostpointercapture_event
@@ -38,18 +43,3 @@ compat_features:
   - api.PointerEvent.tiltY
   - api.PointerEvent.twist
   - api.PointerEvent.width
-
-# The following features in the spec are already part of web-features:
-# - DOM:
-#   - api.Element
-# - touch-action:
-#   - css.properties.touch-action
-#   - css.properties.touch-action.manipulation
-#   - css.properties.touch-action.none
-#   - css.properties.touch-action.pan-down
-#   - css.properties.touch-action.pan-left
-#   - css.properties.touch-action.pan-right
-#   - css.properties.touch-action.pan-up
-#   - css.properties.touch-action.pan-x
-#   - css.properties.touch-action.pan-y
-#   - css.properties.touch-action.pinch-zoom
