--- a/features/webnn.yml
+++ b/features/webnn.yml
@@ -1,3 +1,108 @@
 name: WebNN
 description: The WebNN API constructs and executes computational graphs of neural networks by making use of the various machine learning capabilities and hardware accelerators available on the device. Also known as Web Neural Network API.
 spec: https://www.w3.org/TR/webnn/
+compat_features:
+  - api.ML
+  - api.ML.createContext
+  - api.MLContext
+  - api.MLContext.dispatch
+  - api.MLContext.opSupportLimits
+  - api.MLGraph
+  - api.MLGraphBuilder
+  - api.MLGraphBuilder.MLGraphBuilder
+  - api.MLGraphBuilder.abs
+  - api.MLGraphBuilder.add
+  - api.MLGraphBuilder.argMax
+  - api.MLGraphBuilder.argMin
+  - api.MLGraphBuilder.averagePool2d
+  - api.MLGraphBuilder.batchNormalization
+  - api.MLGraphBuilder.build
+  - api.MLGraphBuilder.cast
+  - api.MLGraphBuilder.ceil
+  - api.MLGraphBuilder.clamp
+  - api.MLGraphBuilder.concat
+  - api.MLGraphBuilder.constant
+  - api.MLGraphBuilder.conv2d
+  - api.MLGraphBuilder.convTranspose2d
+  - api.MLGraphBuilder.cos
+  - api.MLGraphBuilder.cumulativeSum
+  - api.MLGraphBuilder.dequantizeLinear
+  - api.MLGraphBuilder.div
+  - api.MLGraphBuilder.elu
+  - api.MLGraphBuilder.equal
+  - api.MLGraphBuilder.erf
+  - api.MLGraphBuilder.exp
+  - api.MLGraphBuilder.expand
+  - api.MLGraphBuilder.floor
+  - api.MLGraphBuilder.gather
+  - api.MLGraphBuilder.gatherElements
+  - api.MLGraphBuilder.gatherND
+  - api.MLGraphBuilder.gemm
+  - api.MLGraphBuilder.greater
+  - api.MLGraphBuilder.greaterOrEqual
+  - api.MLGraphBuilder.gru
+  - api.MLGraphBuilder.gruCell
+  - api.MLGraphBuilder.hardSigmoid
+  - api.MLGraphBuilder.hardSwish
+  - api.MLGraphBuilder.identity
+  - api.MLGraphBuilder.input
+  - api.MLGraphBuilder.instanceNormalization
+  - api.MLGraphBuilder.l2Pool2d
+  - api.MLGraphBuilder.layerNormalization
+  - api.MLGraphBuilder.leakyRelu
+  - api.MLGraphBuilder.lesser
+  - api.MLGraphBuilder.lesserOrEqual
+  - api.MLGraphBuilder.linear
+  - api.MLGraphBuilder.log
+  - api.MLGraphBuilder.logicalAnd
+  - api.MLGraphBuilder.logicalNot
+  - api.MLGraphBuilder.logicalOr
+  - api.MLGraphBuilder.logicalXor
+  - api.MLGraphBuilder.lstm
+  - api.MLGraphBuilder.lstmCell
+  - api.MLGraphBuilder.matmul
+  - api.MLGraphBuilder.max
+  - api.MLGraphBuilder.maxPool2d
+  - api.MLGraphBuilder.min
+  - api.MLGraphBuilder.mul
+  - api.MLGraphBuilder.neg
+  - api.MLGraphBuilder.pad
+  - api.MLGraphBuilder.pow
+  - api.MLGraphBuilder.prelu
+  - api.MLGraphBuilder.quantizeLinear
+  - api.MLGraphBuilder.reciprocal
+  - api.MLGraphBuilder.reduceL1
+  - api.MLGraphBuilder.reduceL2
+  - api.MLGraphBuilder.reduceLogSum
+  - api.MLGraphBuilder.reduceLogSumExp
+  - api.MLGraphBuilder.reduceMax
+  - api.MLGraphBuilder.reduceMean
+  - api.MLGraphBuilder.reduceMin
+  - api.MLGraphBuilder.reduceProduct
+  - api.MLGraphBuilder.reduceSum
+  - api.MLGraphBuilder.reduceSumSquare
+  - api.MLGraphBuilder.relu
+  - api.MLGraphBuilder.resample2d
+  - api.MLGraphBuilder.reshape
+  - api.MLGraphBuilder.scatterElements
+  - api.MLGraphBuilder.scatterND
+  - api.MLGraphBuilder.sigmoid
+  - api.MLGraphBuilder.sign
+  - api.MLGraphBuilder.sin
+  - api.MLGraphBuilder.slice
+  - api.MLGraphBuilder.softmax
+  - api.MLGraphBuilder.softplus
+  - api.MLGraphBuilder.softsign
+  - api.MLGraphBuilder.split
+  - api.MLGraphBuilder.sqrt
+  - api.MLGraphBuilder.sub
+  - api.MLGraphBuilder.tan
+  - api.MLGraphBuilder.tanh
+  - api.MLGraphBuilder.tile
+  - api.MLGraphBuilder.transpose
+  - api.MLGraphBuilder.triangular
+  - api.MLGraphBuilder.where
+  - api.MLOperand
+  - api.MLOperand.MLNumber
+  - api.Navigator.ml
+  - api.WorkerNavigator.ml
