--- a/features/popover.yml.dist
+++ b/features/popover.yml.dist
@@ -11,6 +11,19 @@ status:
     firefox_android: "125"
     safari: "17"
 compat_features:
+  # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
+  #   chrome: "36"
+  #   chrome_android: "36"
+  #   edge: "79"
+  #   firefox: "49"
+  #   firefox_android: "49"
+  #   safari: "10.1"
+  #   safari_ios: "10.3"
+  - api.HTMLElement.toggle_event
+
   # baseline: low
   # baseline_low_date: 2023-11-21
   # support:
@@ -38,6 +51,7 @@ compat_features:
   #   safari_ios: "17"
   - api.HTMLButtonElement.popoverTargetAction
   - api.HTMLButtonElement.popoverTargetElement
+  - api.HTMLElement.beforetoggle_event
   - api.HTMLElement.beforetoggle_event.popover_elements
   - api.HTMLElement.hidePopover
   - api.HTMLElement.showPopover
