--- a/features/popover.yml
+++ b/features/popover.yml
@@ -8,3 +8,26 @@ group: html
 # References:
 # - https://github.com/mdn/browser-compat-data/issues/22927
 # - https://bugs.webkit.org/show_bug.cgi?id=267688
+compat_features:
+  - api.HTMLButtonElement.popoverTargetAction
+  - api.HTMLButtonElement.popoverTargetElement
+  - api.HTMLElement.beforetoggle_event
+  - api.HTMLElement.beforetoggle_event.popover_elements
+  - api.HTMLElement.hidePopover
+  - api.HTMLElement.popover
+  - api.HTMLElement.showPopover
+  - api.HTMLElement.togglePopover
+  - api.HTMLElement.toggle_event.popover_elements
+  - api.HTMLInputElement.popoverTargetAction
+  - api.HTMLInputElement.popoverTargetElement
+  - api.ToggleEvent
+  - api.ToggleEvent.ToggleEvent
+  - api.ToggleEvent.newState
+  - api.ToggleEvent.oldState
+  - css.selectors.backdrop.popover
+  - css.selectors.popover-open
+  - html.elements.button.popovertarget
+  - html.elements.button.popovertargetaction
+  - html.elements.input.popovertarget
+  - html.elements.input.popovertargetaction
+  - html.global_attributes.popover
