Add alerts, new window keys (#2273)

--- a/features/window.yml
+++ b/features/window.yml
@@ -18,6 +18,8 @@ compat_features:
   - api.Window.load_event
   - api.Window.name
   - api.Window.open
+  - api.Window.open.features_parameter_popup
+  - api.Window.open.once_per_event
   - api.Window.opener
   - api.Window.parent
   - api.Window.self
