--- a/features/window.yml.dist
+++ b/features/window.yml.dist
@@ -127,3 +127,22 @@ compat_features:
   #   firefox_android: "4"
   #   safari: "1"
   - api.Window.open
+
+  # baseline: false
+  # support:
+  #   chrome: "23"
+  #   chrome_android: "25"
+  #   edge: "12"
+  #   firefox: "65"
+  #   firefox_android: "65"
+  #   safari: "11"
+  - api.Window.open.once_per_event
+
+  # baseline: false
+  # support:
+  #   chrome: "98"
+  #   chrome_android: "98"
+  #   edge: "98"
+  #   firefox: "96"
+  #   firefox_android: "96"
+  - api.Window.open.features_parameter_popup
