--- a/features/cookies.yml
+++ b/features/cookies.yml
@@ -1,5 +1,5 @@
 name: Cookies
-description: Cookies store limited amounts of data and remember state information.
+description: The `Set-Cookie` HTTP header stores limited amounts of data that persist across request and response, creating shared state between the browser and server.
 spec: https://httpwg.org/specs/rfc6265.html
 status:
   compute_from: http.headers.Cookie
