--- a/features/requestidlecallback.yml
+++ b/features/requestidlecallback.yml
@@ -1,5 +1,5 @@
 name: requestIdleCallback()
-description: "The `requestIdleCallback()` API queues JavaScript to be executed in idle browser time, either at the end of a frame or when the user is inactive."
+description: "The `requestIdleCallback()` API queues a function that runs in idle browser time, either at the end of a frame or when the user is inactive. Also known as the background tasks API."
 spec: https://w3c.github.io/requestidlecallback/
 caniuse: requestidlecallback
 compat_features:
