--- a/features/events.yml
+++ b/features/events.yml
@@ -5,7 +5,7 @@ spec:
   - https://dom.spec.whatwg.org/#interface-customevent
   - https://dom.spec.whatwg.org/#interface-eventtarget
 status:
-  compute_from: api.Event
+  compute_from: api.EventTarget.addEventListener
 compat_features:
   - api.CustomEvent
   - api.CustomEvent.CustomEvent
