--- a/features/touch-events.yml
+++ b/features/touch-events.yml
@@ -1,5 +1,5 @@
 name: Touch events
-description: Touch Events interpret finger or stylus activity on touch screens or trackpads. These DOM events are similar to mousedown, mousemove.
+description: Touch events `touchstart`, `touchmove`, `touchend`, and `touchcancel` fire when users interact with a touch-sensitive surface, such as a screen or drawing tablet. These events are similar to mouse events.
 spec: https://w3c.github.io/touch-events/
 caniuse: touch
 compat_features:
