Fix current typos

--- a/features/draft/spec/dom.yml
+++ b/features/draft/spec/dom.yml
@@ -368,7 +368,7 @@ compat_features:
 #   - api.Node.getRootNode
 #   - api.Node.isConnected
 #   - api.ShadowRoot
-#   - api.ShadowRoot.clonable
+#   - api.ShadowRoot.cloneable
 #   - api.ShadowRoot.host
 #   - api.ShadowRoot.mode
 # - Imperative slot assignment:
