--- a/features/shadow-dom.yml.dist
+++ b/features/shadow-dom.yml.dist
@@ -118,4 +118,4 @@ compat_features:
   #   firefox_android: "123"
   #   safari: "17.4"
   #   safari_ios: "17.4"
-  - api.ShadowRoot.cloneable
+  - api.ShadowRoot.clonable
