--- a/features/xpath.yml.dist
+++ b/features/xpath.yml.dist
@@ -14,6 +14,7 @@ status:
     safari: "3"
     safari_ios: "1"
 compat_features:
+  - api.Document.createExpression
   - api.Document.evaluate
   - api.XPathEvaluator
   - api.XPathEvaluator.XPathEvaluator
