--- a/features/dom.yml
+++ b/features/dom.yml
@@ -82,7 +82,9 @@ compat_features:
   - api.Document.createComment
   - api.Document.createDocumentFragment
   - api.Document.createElement
+  - api.Document.createElement.options_parameter
   - api.Document.createElementNS
+  - api.Document.createElementNS.options_parameter
   - api.Document.createNodeIterator
   - api.Document.createProcessingInstruction
   - api.Document.createTextNode
