--- a/features/events.yml
+++ b/features/events.yml
@@ -4,10 +4,13 @@ spec:
   - https://html.spec.whatwg.org/multipage/indices.html#events-2
   - https://dom.spec.whatwg.org/#interface-customevent
   - https://dom.spec.whatwg.org/#interface-eventtarget
+status:
+  compute_from: api.EventTarget.addEventListener
 compat_features:
   - api.CustomEvent
   - api.CustomEvent.CustomEvent
   - api.CustomEvent.detail
+  - api.CustomEvent.worker_support
   - api.Event
   - api.Event.Event
   - api.Event.bubbles
@@ -25,9 +28,15 @@ compat_features:
   - api.EventTarget
   - api.EventTarget.EventTarget
   - api.EventTarget.addEventListener
+  - api.EventTarget.addEventListener.options_parameter
   - api.EventTarget.addEventListener.options_parameter.options_capture_parameter
   - api.EventTarget.addEventListener.options_parameter.options_once_parameter
   - api.EventTarget.addEventListener.options_parameter.options_passive_parameter
+  - api.EventTarget.addEventListener.options_parameter.options_passive_parameter_default_true_touch
+  - api.EventTarget.addEventListener.options_parameter.options_passive_parameter_default_true_wheel
+  - api.EventTarget.addEventListener.useCapture_parameter_optional
+  - api.EventTarget.removeEventListener.options_parameter
+  - api.EventTarget.removeEventListener.useCapture_parameter_optional
   - api.EventTarget.addEventListener.options_parameter.options_signal_parameter
   - api.EventTarget.dispatchEvent
   - api.EventTarget.removeEventListener
