--- a/features/events.yml.dist
+++ b/features/events.yml.dist
@@ -3,17 +3,18 @@
 
 status:
   baseline: high
-  baseline_low_date: 2021-09-20
-  baseline_high_date: 2024-03-20
+  baseline_low_date: 2015-07-29
+  baseline_high_date: 2018-01-29
   support:
-    chrome: "90"
-    chrome_android: "90"
-    edge: "90"
-    firefox: "86"
-    firefox_android: "86"
-    safari: "15"
-    safari_ios: "15"
+    chrome: "1"
+    chrome_android: "18"
+    edge: "12"
+    firefox: "1"
+    firefox_android: "4"
+    safari: "1"
+    safari_ios: "1"
 compat_features:
+  # ⬇️ Same status as overall feature ⬇️
   # baseline: high
   # baseline_low_date: 2015-07-29
   # baseline_high_date: 2018-01-29
@@ -50,6 +51,20 @@ compat_features:
   - api.Event.eventPhase
   - api.Event.timeStamp
   - api.Event.type
+
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "1"
+  #   chrome_android: "18"
+  #   edge: "12"
+  #   firefox: "6"
+  #   firefox_android: "6"
+  #   safari: "1"
+  #   safari_ios: "1"
+  - api.EventTarget.addEventListener.useCapture_parameter_optional
+  - api.EventTarget.removeEventListener.useCapture_parameter_optional
 
   # baseline: high
   # baseline_low_date: 2015-07-29
@@ -120,6 +135,33 @@ compat_features:
   - api.Event.isTrusted
 
   # baseline: high
+  # baseline_low_date: 2018-09-17
+  # baseline_high_date: 2021-03-17
+  # support:
+  #   chrome: "43"
+  #   chrome_android: "43"
+  #   edge: "17"
+  #   firefox: "48"
+  #   firefox_android: "48"
+  #   safari: "12"
+  #   safari_ios: "12"
+  - api.CustomEvent.worker_support
+
+  # baseline: high
+  # baseline_low_date: ≤2018-10-02
+  # baseline_high_date: ≤2021-04-02
+  # support:
+  #   chrome: "49"
+  #   chrome_android: "49"
+  #   edge: ≤18
+  #   firefox: "49"
+  #   firefox_android: "49"
+  #   safari: "10"
+  #   safari_ios: "10"
+  - api.EventTarget.addEventListener.options_parameter
+  - api.EventTarget.removeEventListener.options_parameter
+
+  # baseline: high
   # baseline_low_date: ≤2018-10-02
   # baseline_high_date: ≤2021-04-02
   # support:
@@ -159,6 +201,19 @@ compat_features:
   - api.EventTarget.addEventListener.options_parameter.options_once_parameter
 
   # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
+  #   chrome: "55"
+  #   chrome_android: "55"
+  #   edge: "79"
+  #   firefox: "61"
+  #   firefox_android: "61"
+  #   safari: "11.1"
+  #   safari_ios: "11.3"
+  - api.EventTarget.addEventListener.options_parameter.options_passive_parameter_default_true_touch
+
+  # baseline: high
   # baseline_low_date: 2020-09-16
   # baseline_high_date: 2023-03-16
   # support:
@@ -171,7 +226,6 @@ compat_features:
   #   safari_ios: "14"
   - api.EventTarget.EventTarget
 
-  # ⬇️ Same status as overall feature ⬇️
   # baseline: high
   # baseline_low_date: 2021-09-20
   # baseline_high_date: 2024-03-20
@@ -184,3 +238,12 @@ compat_features:
   #   safari: "15"
   #   safari_ios: "15"
   - api.EventTarget.addEventListener.options_parameter.options_signal_parameter
+
+  # baseline: false
+  # support:
+  #   chrome: "73"
+  #   chrome_android: "73"
+  #   edge: "79"
+  #   firefox: "84"
+  #   firefox_android: "84"
+  - api.EventTarget.addEventListener.options_parameter.options_passive_parameter_default_true_wheel
