--- a/features/partitioned-cookies.yml
+++ b/features/partitioned-cookies.yml
@@ -1,5 +1,5 @@
 name: Partitioned cookies
-description: To write...
+description: Cookies Having Independent Partitioned State (CHIPS, also known as Partitioned cookies) allows developers to opt a cookie into partitioned storage, with a separate cookie jar per top-level site.
 spec: https://wicg.github.io/cookie-store/
 compat_features:
   - api.CookieChangeEvent.changed.partitioned_property
@@ -10,3 +10,4 @@ compat_features:
   - api.CookieStore.set.partitioned_option
   - api.ExtendableCookieChangeEvent.changed.partitioned_property
   - api.ExtendableCookieChangeEvent.deleted.partitioned_property
+  - http.headers.Set-Cookie.Partitioned
