--- a/features/canvas-2d.yml.dist
+++ b/features/canvas-2d.yml.dist
@@ -227,6 +227,22 @@ compat_features:
   # baseline_low_date: 2016-08-02
   # baseline_high_date: 2019-02-02
   # support:
+  #   chrome: "36"
+  #   chrome_android: "36"
+  #   edge: "14"
+  #   firefox: "31"
+  #   firefox_android: "31"
+  #   safari: "7"
+  #   safari_ios: "7"
+  - api.CanvasRenderingContext2D.clip.path_parameter
+  - api.CanvasRenderingContext2D.fill.path_parameter
+  - api.CanvasRenderingContext2D.isPointInPath.path_parameter
+  - api.CanvasRenderingContext2D.stroke.path_parameter
+
+  # baseline: high
+  # baseline_low_date: 2016-08-02
+  # baseline_high_date: 2019-02-02
+  # support:
   #   chrome: "37"
   #   chrome_android: "37"
   #   edge: "14"
@@ -279,6 +295,19 @@ compat_features:
   # baseline_low_date: 2020-01-15
   # baseline_high_date: 2022-07-15
   # support:
+  #   chrome: "36"
+  #   chrome_android: "36"
+  #   edge: "79"
+  #   firefox: "31"
+  #   firefox_android: "31"
+  #   safari: "7"
+  #   safari_ios: "7"
+  - api.CanvasRenderingContext2D.isPointInStroke.path_parameter
+
+  # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
   #   chrome: "68"
   #   chrome_android: "68"
   #   edge: "79"
@@ -300,6 +329,33 @@ compat_features:
   #   safari: "11.1"
   #   safari_ios: "11.3"
   - api.CanvasRenderingContext2D.getTransform
+  - api.CanvasRenderingContext2D.setTransform.matrix_parameter
+
+  # baseline: high
+  # baseline_low_date: 2020-07-28
+  # baseline_high_date: 2023-01-28
+  # support:
+  #   chrome: "68"
+  #   chrome_android: "68"
+  #   edge: "79"
+  #   firefox: "79"
+  #   firefox_android: "79"
+  #   safari: "11.1"
+  #   safari_ios: "11.3"
+  - api.CanvasPattern.setTransform.dommatrix
+
+  # baseline: high
+  # baseline_low_date: 2021-09-20
+  # baseline_high_date: 2024-03-20
+  # support:
+  #   chrome: "30"
+  #   chrome_android: "30"
+  #   edge: "79"
+  #   firefox: "42"
+  #   firefox_android: "42"
+  #   safari: "15"
+  #   safari_ios: "15"
+  - api.CanvasRenderingContext2D.drawImage.ImageBitmap_source_image
 
   # baseline: low
   # baseline_low_date: 2022-05-31
@@ -338,6 +394,15 @@ compat_features:
   - api.TextMetrics.alphabeticBaseline
   - api.TextMetrics.hangingBaseline
   - api.TextMetrics.ideographicBaseline
+
+  # baseline: false
+  # support:
+  #   chrome: "37"
+  #   chrome_android: "37"
+  #   edge: "14"
+  #   safari: "8"
+  #   safari_ios: "8"
+  - api.CanvasRenderingContext2D.drawFocusIfNeeded.path_parameter
 
   # baseline: false
   # support:
