--- a/features/cookie-store.yml
+++ b/features/cookie-store.yml
@@ -1,5 +1,5 @@
 name: Cookie store
-description: To write...
+description: The `CookieStore` interface is an asynchronous and promise-based API for managing cookies. It does not rely on document and so is available to service workers as well.
 spec: https://wicg.github.io/cookie-store/
 caniuse: cookie-store-api
 compat_features:
