Add more domparser keys

--- a/features/domparser.yml
+++ b/features/domparser.yml
@@ -6,3 +6,5 @@ compat_features:
   - api.DOMParser
   - api.DOMParser.DOMParser
   - api.DOMParser.parseFromString
+  - api.DOMParser.parseFromString.html
+  - api.DOMParser.parseFromString.xml
