--- a/features/partitioned-cookies.yml.dist
+++ b/features/partitioned-cookies.yml.dist
@@ -8,6 +8,21 @@ status:
     chrome_android: "114"
     edge: "114"
 compat_features:
+  # baseline: false
+  # support:
+  #   chrome: "114"
+  #   chrome_android: "114"
+  #   edge: "114"
+  #   firefox: "131"
+  #   firefox_android: "131"
+  - http.headers.Set-Cookie.Partitioned
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support:
+  #   chrome: "114"
+  #   chrome_android: "114"
+  #   edge: "114"
   - api.CookieChangeEvent.changed.partitioned_property
   - api.CookieChangeEvent.deleted.partitioned_property
   - api.CookieStore.delete.partitioned_option
