--- a/features/autonomous-custom-elements.yml.dist
+++ b/features/autonomous-custom-elements.yml.dist
@@ -41,4 +41,45 @@ compat_features:
   #   safari_ios: "10.3"
   - api.CustomElementRegistry
   - api.CustomElementRegistry.define
+  - api.CustomElementRegistry.whenDefined
   - api.Window.customElements
+
+  # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
+  #   chrome: "68"
+  #   chrome_android: "68"
+  #   edge: "79"
+  #   firefox: "63"
+  #   firefox_android: "63"
+  #   safari: "12.1"
+  #   safari_ios: "12.2"
+  - api.CustomElementRegistry.upgrade
+
+  # baseline: false
+  # support:
+  #   chrome: "54"
+  #   chrome_android: "54"
+  #   edge: "79"
+  #   firefox: "63"
+  #   firefox_android: "63"
+  - api.CustomElementRegistry.get
+
+  # baseline: false
+  # support:
+  #   chrome: "77"
+  #   chrome_android: "77"
+  #   edge: "79"
+  #   firefox: "92"
+  #   firefox_android: "92"
+  - api.CustomElementRegistry.define.disabledFeatures_static_property
+
+  # baseline: false
+  # support:
+  #   chrome: "117"
+  #   chrome_android: "117"
+  #   edge: "117"
+  #   firefox: "116"
+  #   firefox_android: "116"
+  - api.CustomElementRegistry.getName
