--- a/features/gyroscope.yml
+++ b/features/gyroscope.yml
@@ -2,6 +2,8 @@ name: Gyroscope
 description: The `Gyroscope` API reads the angular velocity of a device in three dimensions.
 spec: https://w3c.github.io/gyroscope/#gyroscope-interface
 group: sensors
+status:
+  compute_from: api.Gyroscope
 compat_features:
   - api.Gyroscope
   - api.Gyroscope.Gyroscope
@@ -9,5 +11,5 @@ compat_features:
   - api.Gyroscope.y
   - api.Gyroscope.z
   - api.Permissions.permission_gyroscope
-  # Later addition
-  # - http.headers.Permissions-Policy.gyroscope
+  - html.elements.iframe.allow.gyroscope
+  - http.headers.Permissions-Policy.gyroscope
