--- a/features/gyroscope.yml.dist
+++ b/features/gyroscope.yml.dist
@@ -15,6 +15,13 @@ compat_features:
   #   edge: "79"
   - api.Permissions.permission_gyroscope
 
+  # baseline: false
+  # support:
+  #   chrome: "66"
+  #   chrome_android: "66"
+  #   edge: "79"
+  - html.elements.iframe.allow.gyroscope
+
   # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
@@ -26,3 +33,10 @@ compat_features:
   - api.Gyroscope.x
   - api.Gyroscope.y
   - api.Gyroscope.z
+
+  # baseline: false
+  # support:
+  #   chrome: "88"
+  #   chrome_android: "88"
+  #   edge: "88"
+  - http.headers.Permissions-Policy.gyroscope
