--- a/features/selectors.yml
+++ b/features/selectors.yml
@@ -1,5 +1,5 @@
 name: Selectors (core)
-description: CSS selectors match elements based on their type, attributes, and relationship to other elements. They define the specific elements to which a block of styles will be applied. This feature represents the oldest language features of CSS.
+description: CSS selectors match elements based on their type, attributes, and relationship to other elements. They define the specific elements to which a block of styles will be applied. This feature represents the oldest selectors of CSS.
 spec: https://drafts.csswg.org/selectors-4/
 group: selectors
 compat_features:
