--- a/features/webvtt.yml.dist
+++ b/features/webvtt.yml.dist
@@ -14,6 +14,31 @@ status:
     safari: "6"
     safari_ios: "8"
 compat_features:
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "23"
+  #   chrome_android: "25"
+  #   edge: "12"
+  #   firefox: "31"
+  #   firefox_android: "31"
+  #   safari: "6"
+  #   safari_ios: "8"
   - api.VTTCue
   - api.VTTCue.getCueAsHTML
   - api.VTTCue.text
+
+  # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
+  #   chrome: "33"
+  #   chrome_android: "33"
+  #   edge: "79"
+  #   firefox: "31"
+  #   firefox_android: "31"
+  #   safari: "8"
+  #   safari_ios: "8"
+  - api.VTTCue.VTTCue
