Apply suggestions from code review

--- a/features/geometry.yml
+++ b/features/geometry.yml
@@ -1,5 +1,5 @@
-name: Geometry Level 1
-description: The Geometry interfaces offer a way to represent points, rectangles, quadrilaterals and transformation matrices within JavaScript.
+name: Geometric shapes
+description: The `DOMMatrix`, `DOMPoint`, `DOMQuad` and `DOMRect` interfaces offer a way to represent points, rectangles, quadrilaterals and transformation matrices within JavaScript. They can be used in transformations in CSS, `<canvas>`, and SVG.
 spec: https://drafts.fxtf.org/geometry-1/
 status:
   compute_from: api.DOMMatrix
