Apply suggestions from code review
Co-authored-by: Dietrich Ayala <50103+autonome@users.noreply.github.com>

--- a/features/webvtt-cue-settings.yml
+++ b/features/webvtt-cue-settings.yml
@@ -1,5 +1,5 @@
-name: WebVTT Cue Settings
-description: The members of the `VTTCue` API can be used to update cues dynamically.
+name: WebVTT cue settings
+description: The `VTTCue` API updates various aspects of cues dynamically, such as alignment, size and position.
 spec: https://w3c.github.io/webvtt/#the-vttcue-interface
 compat_features:
   - api.VTTCue.align
