--- a/features/form.yml
+++ b/features/form.yml
@@ -5,6 +5,11 @@ group: forms
 status:
   compute_from: html.elements.form
 compat_features:
+  - api.FormDataEvent
+  - api.FormDataEvent.FormDataEvent
+  - api.FormDataEvent.formData
+  - api.HTMLFormControlsCollection
+  - api.HTMLFormControlsCollection.namedItem
   - api.HTMLFormElement
   - api.HTMLFormElement.acceptCharset
   - api.HTMLFormElement.action
