--- a/features/pointer-events.yml
+++ b/features/pointer-events.yml
@@ -1,5 +1,5 @@
 name: pointer-events
-description: The `pointer-events` CSS property sets whether an element triggers pointer events.
+description: The `pointer-events` CSS property sets whether a user can interact with an element using a mouse, touch, or other pointing input device.
 spec: https://drafts.csswg.org/css-ui-4/#pointer-events-control
 compat_features:
   - css.properties.pointer-events
