--- a/features/contain.yml
+++ b/features/contain.yml
@@ -4,8 +4,7 @@ spec: https://drafts.csswg.org/css-contain-2/#contain-property
 group: containment
 caniuse: css-containment
 compat_features:
-  # Already included in `contain: size`
-  #- css.properties.contain
+  - css.properties.contain
   - css.properties.contain.content
   - css.properties.contain.none
   - css.properties.contain.strict
