--- a/features/contain.yml.dist
+++ b/features/contain.yml.dist
@@ -14,6 +14,7 @@ status:
     safari: "15.4"
     safari_ios: "15.4"
 compat_features:
+  - css.properties.contain
   - css.properties.contain.content
   - css.properties.contain.none
   - css.properties.contain.strict
