Add root types to first use

--- a/features/gradients.yml
+++ b/features/gradients.yml
@@ -9,6 +9,7 @@ status:
 # TODO: we should have separate linear and radial gradients when https://github.com/web-platform-dx/web-features/issues/971 is resolved.
 compat_features:
   - css.properties.background-image.gradients
+  - css.types.image
   - css.types.image.gradient
   - css.types.image.gradient.linear-gradient
   - css.types.image.gradient.linear-gradient.doubleposition
