--- a/features/inherit-value.yml
+++ b/features/inherit-value.yml
@@ -3,4 +3,5 @@ description: The `inherit` keyword resets any CSS property to the computed value
 group: explicit-defaults
 spec: https://drafts.csswg.org/css-cascade-3/#inherit
 compat_features:
+  - css.types.global_keywords
   - css.types.global_keywords.inherit
