--- a/features/inherit-value.yml.dist
+++ b/features/inherit-value.yml.dist
@@ -14,4 +14,5 @@ status:
     safari: "1"
     safari_ios: "1"
 compat_features:
+  - css.types.global_keywords
   - css.types.global_keywords.inherit
