Enable dependabot for gh-pages subpackage

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,6 +17,10 @@ updates:
     directory: packages/compute-baseline
     schedule:
       interval: daily
+  - package-ecosystem: npm
+    directory: gh-pages
+    schedule:
+      interval: daily
 
   - package-ecosystem: github-actions
     directory: "/"
