--- a/features/wheel-events.yml
+++ b/features/wheel-events.yml
@@ -2,7 +2,7 @@ name: Wheel events
 description: Wheel events occur when the user moves a mouse wheel or similar spatially rotating input device.
 spec: https://w3c.github.io/uievents/#events-wheelevents
 status:
-  compute_from: api.WheelEvent
+  compute_from: api.Element.wheel_event
 compat_features:
   - api.Element.wheel_event
   - api.WheelEvent
