--- a/features/draft/spec/dom.yml.dist
+++ b/features/draft/spec/dom.yml.dist
@@ -9,19 +9,6 @@ status:
     edge: "125"
 compat_features:
   # baseline: high
-  # baseline_low_date: 2015-07-29
-  # baseline_high_date: 2018-01-29
-  # support:
-  #   chrome: "1"
-  #   chrome_android: "18"
-  #   edge: "12"
-  #   firefox: "1"
-  #   firefox_android: "4"
-  #   safari: "1"
-  #   safari_ios: "1"
-  - api.Document.createEvent
-
-  # baseline: high
   # baseline_low_date: ≤2020-01-15
   # baseline_high_date: ≤2022-07-15
   # support:
@@ -83,6 +70,17 @@ compat_features:
   #   safari: "18"
   #   safari_ios: "18"
   - api.ShadowRoot.serializable
+
+  # baseline: false
+  # support:
+  #   chrome: "1"
+  #   chrome_android: "18"
+  #   edge: "12"
+  #   firefox: "1"
+  #   firefox_android: "4"
+  #   safari: "1"
+  #   safari_ios: "1"
+  - api.Document.createEvent
 
   # baseline: false
   # support:
