--- a/features/slot.yml.dist
+++ b/features/slot.yml.dist
@@ -86,3 +86,7 @@ compat_features:
   #   safari: "10"
   #   safari_ios: "10"
   - html.global_attributes.slot
+
+  # baseline: false
+  # support: {}
+  - css.selectors.has-slotted
