update descriptions per review

--- a/features/composition-events.yml
+++ b/features/composition-events.yml
@@ -1,5 +1,5 @@
 name: Composition events
-description: Composition Events are a method of adding text containing characters that might not be commonly available on keyboard, from emoji to logograms in Asian languages to input from speech recognition processors.
+description: The `compositionstart`, `compositionupdate` and `compositionend` events fire when text containing characters that might not be commonly available on keyboards are added. Examples of these characters are emoji, logograms in Asian languages, or input from speech recognition processors.
 spec: https://w3c.github.io/uievents/#events-compositionevents
 compat_features:
   - api.CompositionEvent
