--- a/features/focus-events.yml
+++ b/features/focus-events.yml
@@ -1,5 +1,5 @@
 name: Focus events
-description: Focus events represent changes in the focused or blurred elements or windows.
+description: The `blur`, `focus`, `focusin` and `focusout` events fire when there are changes in focus for the elements or windows involved.
 spec: https://w3c.github.io/uievents/#events-focusevent
 compat_features:
   - api.Element.blur_event
