--- a/features/keyboard-events.yml
+++ b/features/keyboard-events.yml
@@ -1,5 +1,5 @@
 name: Keyboard events
-description: Keyboard events describe a single interaction between the user and a key (or combination of a key with modifier keys) on the keyboard.
+description: The `keydown` and `keyup` events fire for each interaction between the user and a key (or combination of a key with modifier keys) on the keyboard.
 spec: https://w3c.github.io/uievents/#events-keyboardevents
 status:
   compute_from:
