--- a/features/wheel-events.yml
+++ b/features/wheel-events.yml
@@ -1,5 +1,5 @@
 name: Wheel events
-description: Wheel events occur when the user moves a mouse wheel or similar spatially rotating input device.
+description: The `wheel` event fires when the user moves a mouse wheel or similar spatially rotating input device.
 spec: https://w3c.github.io/uievents/#events-wheelevents
 status:
   compute_from: api.Element.wheel_event
