--- a/features/fullscreen.yml.dist
+++ b/features/fullscreen.yml.dist
@@ -73,3 +73,9 @@ compat_features:
   - api.Element.requestFullscreen
   - api.Element.requestFullscreen.returns_promise
   - api.ShadowRoot.fullscreenElement
+
+  # baseline: false
+  # support:
+  #   firefox: "64"
+  #   firefox_android: "64"
+  - css.selectors.fullscreen.all_elements
