Adds keys to svg feature

--- a/features/svg.yml
+++ b/features/svg.yml
@@ -528,6 +528,8 @@ compat_features:
   - svg.global_attributes.text-anchor
   - svg.global_attributes.text-decoration
   - svg.global_attributes.text-rendering
+  - css.properties.text-rendering.auto
+  - css.properties.text-rendering.geometricPrecision
   - svg.global_attributes.transform
   - svg.global_attributes.unicode-bidi
   - svg.global_attributes.vector-effect
