--- a/features/text-stroke-fill.yml
+++ b/features/text-stroke-fill.yml
@@ -1,5 +1,5 @@
-name: Text stroke and fill
-description: The `-webkit-text-stroke-width` and `-webkit-text-stroke-color` CSS properties set the thickness and color of text outlines. The `-webkit-text-fill-color` sets the color within text character outlines. Both default to the text `color`.
+name: Text stroke and fill  (compatibility prefixes)
+description: The `-webkit-text-stroke-width` and `-webkit-text-stroke-color` CSS properties set the thickness and color of text outlines. The `-webkit-text-fill-color` sets the color within text character outlines. Both default to the text color.
 group: css
 caniuse: text-stroke
 spec: https://compat.spec.whatwg.org/#text-fill-and-stroking
