--- a/features/webvtt.yml
+++ b/features/webvtt.yml
@@ -13,4 +13,5 @@ compat_features:
   - api.VTTCue
   - api.VTTCue.getCueAsHTML
   - api.VTTCue.text
+  - api.VTTCue.text.all_html_character_references
   - api.VTTCue.VTTCue
