--- a/features/webvtt.yml.dist
+++ b/features/webvtt.yml.dist
@@ -42,3 +42,15 @@ compat_features:
   #   safari: "8"
   #   safari_ios: "8"
   - api.VTTCue.VTTCue
+
+  # baseline: low
+  # baseline_low_date: 2024-06-11
+  # support:
+  #   chrome: ≤80
+  #   chrome_android: "80"
+  #   edge: "80"
+  #   firefox: "127"
+  #   firefox_android: "127"
+  #   safari: "17.5"
+  #   safari_ios: "17.5"
+  - api.VTTCue.text.all_html_character_references
