--- a/features/webvtt-cue-settings.yml
+++ b/features/webvtt-cue-settings.yml
@@ -8,3 +8,5 @@ compat_features:
   - api.VTTCue.size
   - api.VTTCue.snapToLines
   - api.VTTCue.vertical
+  - css.selectors.cue
+  - css.selectors.cue.selector_argument
