--- a/features/webvtt-cue-settings.yml.dist
+++ b/features/webvtt-cue-settings.yml.dist
@@ -14,9 +14,43 @@ status:
     safari: "6"
     safari_ios: "8"
 compat_features:
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
+  #   chrome: "23"
+  #   chrome_android: "25"
+  #   edge: "79"
+  #   firefox: "31"
+  #   firefox_android: "31"
+  #   safari: "6"
+  #   safari_ios: "8"
   - api.VTTCue.align
   - api.VTTCue.line
   - api.VTTCue.position
   - api.VTTCue.size
   - api.VTTCue.snapToLines
   - api.VTTCue.vertical
+
+  # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
+  #   chrome: "26"
+  #   chrome_android: "26"
+  #   edge: "79"
+  #   firefox: "55"
+  #   firefox_android: "55"
+  #   safari: "7"
+  #   safari_ios: "7"
+  - css.selectors.cue
+
+  # baseline: false
+  # support:
+  #   chrome: "26"
+  #   chrome_android: "26"
+  #   edge: "79"
+  #   safari: "7"
+  #   safari_ios: "7"
+  - css.selectors.cue.selector_argument
