Initial commit of baseline-browser-maping package

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 coverage/
 node_modules/
+packages/baseline-browser-mapping/package-lock.json
 packages/compute-baseline/dist/
 packages/web-features/index.d.ts
 packages/**/LICENSE.txt
@@ -8,6 +9,7 @@ packages/web-features/data.schema.json
 packages/web-features/types.ts
 data.extended.json
 index.js
+
 
 # Ignore files created & used by pages & 11ty
 /_site/**
