--- a/packages/baseline-browser-mapping/package.json
+++ b/packages/baseline-browser-mapping/package.json
@@ -2,6 +2,9 @@
   "name": "baseline-browser-mapping",
   "version": "0.1.0",
   "description": "A library for obtaining browser versions with their maximum supported Baseline feature set and Widely Available status.",
+  "exports": {
+    "." : "./scripts/baseline-years.js"
+  },
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
