--- a/features/has-slotted.yml
+++ b/features/has-slotted.yml
@@ -1,5 +1,5 @@
 name: :has-slotted
-description: The `:has-slotted` CSS pseudo-class matches `<slot>` elements with any slotted content, including whitespace, text nodes, or elements. It can be used to determine that a `<slot>`'s fallback content is not displayed.
+description: The `:has-slotted` CSS pseudo-class matches `<slot>` elements where the fallback content is not shown. The pseudo-class matches any slotted content, including white space, text nodes, or elements.
 spec: https://drafts.csswg.org/css-scoping-1/#the-has-slotted-pseudo
 group:
   - selectors
