--- a/features/partitioned-cookies.yml
+++ b/features/partitioned-cookies.yml
@@ -1,5 +1,5 @@
 name: Partitioned cookies
-description: Cookies Having Independent Partitioned State (CHIPS, also known as Partitioned cookies) allows developers to opt a cookie into partitioned storage, with a separate cookie jar per top-level site.
+description: Partitioned cookies allow you to opt a cookie into partitioned storage, with a separate cookie jar per top-level site. Also known as Cookies Having Independent Partitioned State or CHIPS.
 spec: https://wicg.github.io/cookie-store/
 compat_features:
   - api.CookieChangeEvent.changed.partitioned_property
