--- a/features/attribution-reporting.yml
+++ b/features/attribution-reporting.yml
@@ -1,5 +1,5 @@
 name: Attribution reporting
-description: The attribution reporting API measures and attributes conversions to advertisements a user interacted with on another site.
+description: The Attribution Reporting API measures when an ad click or view leads to a conversion, such as a purchase on an advertiser site.
 spec: https://wicg.github.io/attribution-reporting-api/
 compat_features:
   - api.HTMLAnchorElement.attributionSrc
