--- a/features/attribution-reporting.yml
+++ b/features/attribution-reporting.yml
@@ -1,12 +1,13 @@
-draft_date: 2024-10-28
-name: Attribution Reporting
-description: TODO
+name: Attribution reporting
+description: The Attribution Reporting API measures when an ad click or view leads to a conversion, such as a purchase on an advertiser site.
 spec: https://wicg.github.io/attribution-reporting-api/
 compat_features:
   - api.HTMLAnchorElement.attributionSrc
   - api.HTMLImageElement.attributionSrc
   - api.HTMLScriptElement.attributionSrc
+  - api.Request.Request.init_attributionReporting_parameter
   - api.XMLHttpRequest.setAttributionReporting
+  - api.fetch.init_attributionReporting_parameter
   - html.elements.a.attributionsrc
   - html.elements.iframe.allow.attribution-reporting
   - html.elements.img.attributionsrc
@@ -16,8 +17,3 @@ compat_features:
   - http.headers.Attribution-Reporting-Register-Trigger
   - http.headers.Attribution-Reporting-Support
   - http.headers.Permissions-Policy.attribution-reporting
-
-# The following features in the spec are already part of web-features:
-# - Fetch:
-#   - api.Request.Request.init_attributionReporting_parameter
-#   - api.fetch.init_attributionReporting_parameter
