Adds missing keys to svg feature (#2332)
* Adds keys to svg feature

* Better organizes added keys

--- a/features/svg.yml
+++ b/features/svg.yml
@@ -601,6 +601,8 @@ compat_features:
   - css.properties.stroke
   - css.properties.text-anchor
   - css.properties.text-rendering
+  - css.properties.text-rendering.auto
+  - css.properties.text-rendering.geometricPrecision
   - css.properties.vector-effect
   - css.properties.x
   - css.properties.y
