--- a/features/conic-gradients.yml
+++ b/features/conic-gradients.yml
@@ -4,8 +4,8 @@ spec: https://drafts.csswg.org/css-images-4/#conic-gradients
 group: gradients
 caniuse: css-conic-gradients
 status:
-  compute_from: css.types.image.gradient.conic-gradient
+  compute_from: css.types.gradient.conic-gradient
 compat_features:
-  - css.types.image.gradient.conic-gradient
-  - css.types.image.gradient.conic-gradient.doubleposition
-  - css.types.image.gradient.repeating-conic-gradient
+  - css.types.gradient.conic-gradient
+  - css.types.gradient.conic-gradient.doubleposition
+  - css.types.gradient.repeating-conic-gradient
