--- a/features/gradient-interpolation.yml.dist
+++ b/features/gradient-interpolation.yml.dist
@@ -13,15 +13,15 @@ status:
     safari: "16.2"
     safari_ios: "16.2"
 compat_features:
-  - css.types.image.gradient.conic-gradient.hue_interpolation_method
-  - css.types.image.gradient.conic-gradient.interpolation_color_space
-  - css.types.image.gradient.linear-gradient.hue_interpolation_method
-  - css.types.image.gradient.linear-gradient.interpolation_color_space
-  - css.types.image.gradient.radial-gradient.hue_interpolation_method
-  - css.types.image.gradient.radial-gradient.interpolation_color_space
-  - css.types.image.gradient.repeating-conic-gradient.hue_interpolation_method
-  - css.types.image.gradient.repeating-conic-gradient.interpolation_color_space
-  - css.types.image.gradient.repeating-linear-gradient.hue_interpolation_method
-  - css.types.image.gradient.repeating-linear-gradient.interpolation_color_space
-  - css.types.image.gradient.repeating-radial-gradient.hue_interpolation_method
-  - css.types.image.gradient.repeating-radial-gradient.interpolation_color_space
+  - css.types.gradient.conic-gradient.hue_interpolation_method
+  - css.types.gradient.conic-gradient.interpolation_color_space
+  - css.types.gradient.linear-gradient.hue_interpolation_method
+  - css.types.gradient.linear-gradient.interpolation_color_space
+  - css.types.gradient.radial-gradient.hue_interpolation_method
+  - css.types.gradient.radial-gradient.interpolation_color_space
+  - css.types.gradient.repeating-conic-gradient.hue_interpolation_method
+  - css.types.gradient.repeating-conic-gradient.interpolation_color_space
+  - css.types.gradient.repeating-linear-gradient.hue_interpolation_method
+  - css.types.gradient.repeating-linear-gradient.interpolation_color_space
+  - css.types.gradient.repeating-radial-gradient.hue_interpolation_method
+  - css.types.gradient.repeating-radial-gradient.interpolation_color_space
