--- a/features/conic-gradients.yml.dist
+++ b/features/conic-gradients.yml.dist
@@ -26,8 +26,8 @@ compat_features:
   #   firefox_android: "83"
   #   safari: "12.1"
   #   safari_ios: "12.2"
-  - css.types.image.gradient.conic-gradient
-  - css.types.image.gradient.repeating-conic-gradient
+  - css.types.gradient.conic-gradient
+  - css.types.gradient.repeating-conic-gradient
 
   # baseline: high
   # baseline_low_date: 2020-11-17
@@ -40,4 +40,4 @@ compat_features:
   #   firefox_android: "83"
   #   safari: "12.1"
   #   safari_ios: "12.2"
-  - css.types.image.gradient.conic-gradient.doubleposition
+  - css.types.gradient.conic-gradient.doubleposition
