--- a/features/gradient-interpolation.yml
+++ b/features/gradient-interpolation.yml
@@ -3,15 +3,15 @@ description: Gradient interpolation controls how the colors between gradient sto
 spec: https://drafts.csswg.org/css-color-4/#interpolation-space
 group: gradients
 compat_features:
-  - css.types.image.gradient.conic-gradient.hue_interpolation_method
-  - css.types.image.gradient.conic-gradient.interpolation_color_space
-  - css.types.image.gradient.linear-gradient.hue_interpolation_method
-  - css.types.image.gradient.linear-gradient.interpolation_color_space
-  - css.types.image.gradient.radial-gradient.hue_interpolation_method
-  - css.types.image.gradient.radial-gradient.interpolation_color_space
-  - css.types.image.gradient.repeating-conic-gradient.hue_interpolation_method
-  - css.types.image.gradient.repeating-conic-gradient.interpolation_color_space
-  - css.types.image.gradient.repeating-linear-gradient.hue_interpolation_method
-  - css.types.image.gradient.repeating-linear-gradient.interpolation_color_space
-  - css.types.image.gradient.repeating-radial-gradient.hue_interpolation_method
-  - css.types.image.gradient.repeating-radial-gradient.interpolation_color_space
+  - css.types.gradient.conic-gradient.hue_interpolation_method
+  - css.types.gradient.conic-gradient.interpolation_color_space
+  - css.types.gradient.linear-gradient.hue_interpolation_method
+  - css.types.gradient.linear-gradient.interpolation_color_space
+  - css.types.gradient.radial-gradient.hue_interpolation_method
+  - css.types.gradient.radial-gradient.interpolation_color_space
+  - css.types.gradient.repeating-conic-gradient.hue_interpolation_method
+  - css.types.gradient.repeating-conic-gradient.interpolation_color_space
+  - css.types.gradient.repeating-linear-gradient.hue_interpolation_method
+  - css.types.gradient.repeating-linear-gradient.interpolation_color_space
+  - css.types.gradient.repeating-radial-gradient.hue_interpolation_method
+  - css.types.gradient.repeating-radial-gradient.interpolation_color_space
