--- a/features/gradients.yml
+++ b/features/gradients.yml
@@ -5,29 +5,29 @@ spec: https://drafts.csswg.org/css-images-3/#gradients
 # caniuse: css-gradients
 group: gradients
 status:
-  compute_from: css.types.image.gradient
+  compute_from: css.types.gradient
 # TODO: we should have separate linear and radial gradients when https://github.com/web-platform-dx/web-features/issues/971 is resolved.
 compat_features:
   - css.properties.background-image.gradients
   - css.types.image
-  - css.types.image.gradient
-  - css.types.image.gradient.linear-gradient
-  - css.types.image.gradient.linear-gradient.doubleposition
-  - css.types.image.gradient.linear-gradient.interpolation_hints
-  - css.types.image.gradient.linear-gradient.premultiplied_gradients
-  - css.types.image.gradient.linear-gradient.to
-  - css.types.image.gradient.linear-gradient.unitless_0_angle
-  - css.types.image.gradient.repeating-linear-gradient
-  - css.types.image.gradient.repeating-linear-gradient.doubleposition
-  - css.types.image.gradient.repeating-linear-gradient.interpolation_hints
-  - css.types.image.gradient.repeating-linear-gradient.to
-  - css.types.image.gradient.repeating-linear-gradient.unitless_0_angle
-  - css.types.image.gradient.radial-gradient
-  - css.types.image.gradient.radial-gradient.at
-  - css.types.image.gradient.radial-gradient.doubleposition
-  - css.types.image.gradient.radial-gradient.interpolation_hints
-  - css.types.image.gradient.radial-gradient.premultiplied_gradients
-  - css.types.image.gradient.repeating-radial-gradient
-  - css.types.image.gradient.repeating-radial-gradient.at
-  - css.types.image.gradient.repeating-radial-gradient.doubleposition
-  - css.types.image.gradient.repeating-radial-gradient.interpolation_hints
+  - css.types.gradient
+  - css.types.gradient.linear-gradient
+  - css.types.gradient.linear-gradient.doubleposition
+  - css.types.gradient.linear-gradient.interpolation_hints
+  - css.types.gradient.linear-gradient.premultiplied_gradients
+  - css.types.gradient.linear-gradient.to
+  - css.types.gradient.linear-gradient.unitless_0_angle
+  - css.types.gradient.repeating-linear-gradient
+  - css.types.gradient.repeating-linear-gradient.doubleposition
+  - css.types.gradient.repeating-linear-gradient.interpolation_hints
+  - css.types.gradient.repeating-linear-gradient.to
+  - css.types.gradient.repeating-linear-gradient.unitless_0_angle
+  - css.types.gradient.radial-gradient
+  - css.types.gradient.radial-gradient.at
+  - css.types.gradient.radial-gradient.doubleposition
+  - css.types.gradient.radial-gradient.interpolation_hints
+  - css.types.gradient.radial-gradient.premultiplied_gradients
+  - css.types.gradient.repeating-radial-gradient
+  - css.types.gradient.repeating-radial-gradient.at
+  - css.types.gradient.repeating-radial-gradient.doubleposition
+  - css.types.gradient.repeating-radial-gradient.interpolation_hints
