--- a/features/gradients.yml.dist
+++ b/features/gradients.yml.dist
@@ -52,7 +52,7 @@ compat_features:
   #   firefox_android: "4"
   #   safari: "7"
   #   safari_ios: "7"
-  - css.types.image.gradient
+  - css.types.gradient
 
   # baseline: high
   # baseline_low_date: 2015-07-29
@@ -65,14 +65,14 @@ compat_features:
   #   firefox_android: "16"
   #   safari: "7"
   #   safari_ios: "7"
-  - css.types.image.gradient.linear-gradient
-  - css.types.image.gradient.linear-gradient.to
-  - css.types.image.gradient.radial-gradient
-  - css.types.image.gradient.radial-gradient.at
-  - css.types.image.gradient.repeating-linear-gradient
-  - css.types.image.gradient.repeating-linear-gradient.to
-  - css.types.image.gradient.repeating-radial-gradient
-  - css.types.image.gradient.repeating-radial-gradient.at
+  - css.types.gradient.linear-gradient
+  - css.types.gradient.linear-gradient.to
+  - css.types.gradient.radial-gradient
+  - css.types.gradient.radial-gradient.at
+  - css.types.gradient.repeating-linear-gradient
+  - css.types.gradient.repeating-linear-gradient.to
+  - css.types.gradient.repeating-radial-gradient
+  - css.types.gradient.repeating-radial-gradient.at
 
   # baseline: high
   # baseline_low_date: 2017-08-08
@@ -85,8 +85,8 @@ compat_features:
   #   firefox_android: "55"
   #   safari: "7"
   #   safari_ios: "7"
-  - css.types.image.gradient.linear-gradient.unitless_0_angle
-  - css.types.image.gradient.repeating-linear-gradient.unitless_0_angle
+  - css.types.gradient.linear-gradient.unitless_0_angle
+  - css.types.gradient.repeating-linear-gradient.unitless_0_angle
 
   # baseline: high
   # baseline_low_date: 2020-01-15
@@ -99,9 +99,9 @@ compat_features:
   #   firefox_android: "36"
   #   safari: "7"
   #   safari_ios: "7"
-  - css.types.image.gradient.linear-gradient.interpolation_hints
-  - css.types.image.gradient.radial-gradient.interpolation_hints
-  - css.types.image.gradient.repeating-linear-gradient.interpolation_hints
+  - css.types.gradient.linear-gradient.interpolation_hints
+  - css.types.gradient.radial-gradient.interpolation_hints
+  - css.types.gradient.repeating-linear-gradient.interpolation_hints
 
   # baseline: high
   # baseline_low_date: 2020-01-15
@@ -114,7 +114,7 @@ compat_features:
   #   firefox_android: "46"
   #   safari: "7"
   #   safari_ios: "7"
-  - css.types.image.gradient.repeating-radial-gradient.interpolation_hints
+  - css.types.gradient.repeating-radial-gradient.interpolation_hints
 
   # baseline: high
   # baseline_low_date: 2020-01-15
@@ -127,10 +127,10 @@ compat_features:
   #   firefox_android: "64"
   #   safari: "12.1"
   #   safari_ios: "12.2"
-  - css.types.image.gradient.linear-gradient.doubleposition
-  - css.types.image.gradient.radial-gradient.doubleposition
-  - css.types.image.gradient.repeating-linear-gradient.doubleposition
-  - css.types.image.gradient.repeating-radial-gradient.doubleposition
+  - css.types.gradient.linear-gradient.doubleposition
+  - css.types.gradient.radial-gradient.doubleposition
+  - css.types.gradient.repeating-linear-gradient.doubleposition
+  - css.types.gradient.repeating-radial-gradient.doubleposition
 
   # baseline: high
   # baseline_low_date: 2021-09-20
@@ -143,5 +143,5 @@ compat_features:
   #   firefox_android: "36"
   #   safari: "15"
   #   safari_ios: "15"
-  - css.types.image.gradient.linear-gradient.premultiplied_gradients
-  - css.types.image.gradient.radial-gradient.premultiplied_gradients
+  - css.types.gradient.linear-gradient.premultiplied_gradients
+  - css.types.gradient.radial-gradient.premultiplied_gradients
